--- a/index.html
+++ b/index.html
@@ -39,6 +39,7 @@
             <h2>Контакты</h2>
             <p><b>Email:</b> alevtinaromanova1606@yandex.ru</p>
             <p><b>Телефон:</b> +7 900 534 00 00</p>
+            <p><b>Telegram:</b>@alevtinaromanova</p>
         </section>
     </main>
     <footer>
